--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
                     
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link " aria-current="page" href="#">
                       <i class="bi bi-house-door-fill"></i>
                     Home
                     </a>
