--- a/albumPage.html
+++ b/albumPage.html
@@ -15,6 +15,118 @@
       </svg>
     </button>
 
+    <div id="heartIcon">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="#796172" class="bi bi-heart" viewBox="0 0 16 16">
+        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+      </svg>
+    </div>
+
+    <div id="ellipsisIcon">
+      <svg xmlns="http://www.w3.org/2000/svg" fill="#796172" class="bi bi-three-dots" viewBox="0 0 16 16">
+        <path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
+      </svg>
+    </div>
+
+    <table class="table borderless">
+      <thead>
+        <tr>
+          <th style="width: 2%;" scope="col">#</th>
+          <th style="width: 85%;" scope="col">TITLE</th>
+          <th scope="col"></th>
+          <th scope="col-">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+              <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
+              <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
+            </svg>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td >
+            <h6>20th Century Fox Fanfare</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>0:25</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>
+            <h6>Somebody To Love</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>4:55</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>
+            <h6>Doing All Right - ...Revisited</h6>
+            <p >Smile</p>
+          </td>
+          <td></td>
+          <td>3:16</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>
+            <h6>Keep Yourself Alive - Live At The Rainbow</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>3:56</td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td>
+            <h6>Killer Queen</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>2:59</td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td>
+            <h6>Fat Bottomed Girls</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>4:37</td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td>
+            <h6>Bohemian Rhapsody</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>5:54</td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td>
+            <h6>Now I'm Here - Live At The Hammersmith Odeon</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>4:25</td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td>
+            <h6>Crazy Little Thing Called Love</h6>
+            <p >Queen</p>
+          </td>
+          <td></td>
+          <td>2:43</td>
+        </tr>
+        
+        
+      </tbody>
+    </table>
    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
