--- a/albumPage.html
+++ b/albumPage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>Album List</title>
     <link rel="stylesheet" href="albumStyle.css">
   </head>
   <body>
@@ -27,14 +27,15 @@
       </svg>
     </div>
 
+
     <table class="table borderless">
       <thead>
         <tr>
           <th style="width: 2%;" scope="col">#</th>
           <th style="width: 85%;" scope="col">TITLE</th>
           <th scope="col"></th>
-          <th scope="col-">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16">
+          <th scope="col">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16" style="margin-inline-start: 15px;">
               <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
               <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
             </svg>
@@ -43,7 +44,7 @@
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
+          <th scope="row" >1</th>
           <td >
             <h6>20th Century Fox Fanfare</h6>
             <p >Queen</p>
