--- a/index.html
+++ b/index.html
@@ -21,15 +21,43 @@
         <img src="https://i.scdn.co/image/ab67616d0000b27358aa659299939bc52a2dbc22" alt="Group 'Queen' album cover" class="song-nav-img-resize">
         <div class="text-and-icons">
           <div class="text-description">
-            <h5>Another One Bites The Dust - Remastered 2011</h5>
-            <p>Queen</p>
+            <a href="#"> <h5>Another One Bites The Dust - Remastered 2011</h5> </a>
+            <a href="#"> <p>Queen</p> </a>
           </div>
           <div class="song-nav-icons">
             <img src="spotify-icons/heart-64.png" class="song-nav-icons-resize">
           </div>
         </div>
       </div>
+
+      <div class="middle-song-nav">
+        <div class="top-part-song-nav">
+          <img src="spotify-icons/shuffle.png">
+          <img src="spotify-icons/previous-2.png">
+          <img src="spotify-icons/play-button.png" id="middle-icon">
+          <img src="spotify-icons/previous-3.png">
+          <img src="spotify-icons/loop.png">
+        </div>
+        <div class="btm-part-song-nav">
+          <p>0:12</p>
+          <span class="song-bar-line"></span>
+          <p>3:34</p>
+        </div>
+      </div>
+
+      <div class="right-song-nav">
+        <div class="icons-combo" >
+          <img src="spotify-icons/list.png" id="first-icon">
+          <img src="spotify-icons/responsive.png">
+          <img src="spotify-icons/audio.png">
+          <div class="volume-line"></div>
+        </div>
+      </div>
     </div>
+
+
+
+
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
