--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
       <!---END SIDEBAR-->
 
       <!----Content-->
-      <div class="col-12 col-md-6 col-sm-2 col-1 offset-md-3 mainPage">
-
+      <div class=" col-12 col-md-7 col-lg-7 col-xl-10 offset-md-3 mainPage">
+ 
         <!-----Recommended albums and playlists-->
 
         <div class="container-fluid">
