--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ body{
   <h5 class="m-4">Recently played</h5>
 
   <div style="position: relative;">
-    <p class="cardtext" style="position: absolute; right: 20px; top: -40px; font-weight: 600;">SEE ALL</p>
+    <button><p class="cardtext" style="position: absolute; right: 20px; top: -40px; font-weight: 600;">SEE ALL</p>></button>
     </div>
 
   <div class="container-fluid">
@@ -315,7 +315,7 @@ body{
 <p class="mx-4 cardtext">Podcasts we think you´ll get hooked on.</p>
 
 <div style="position: relative;">
-<p class="cardtext" style="position: absolute; right: 20px; top: -35px; font-weight: 600;">SEE ALL</p>
+  <button><p class="cardtext" style="position: absolute; right: 20px; top: -35px; font-weight: 600;">SEE ALL</p></button>
 </div>
 
 <div class="container-fluid">
