Added 'hover' & active 'states'

--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
             <a href="#"> <p>Queen</p> </a>
           </div>
           <div class="song-nav-icons">
-            <img src="spotify-icons/heart-64.png" class="song-nav-icons-resize">
+            <img src="spotify-icons/heart.svg" class="song-nav-icons-resize pointer">
           </div>
         </div>
       </div>
 
       <div class="middle-song-nav">
         <div class="top-part-song-nav">
-          <img src="spotify-icons/shuffle.png">
-          <img src="spotify-icons/previous-2.png">
-          <img src="spotify-icons/play-button.png" id="middle-icon">
-          <img src="spotify-icons/previous-3.png">
-          <img src="spotify-icons/loop.png">
+          <img src="spotify-icons/shuffle.png" class="pointer">
+          <img src="spotify-icons/previous-2.png" class="pointer">
+          <img src="spotify-icons/play-button.png" id="middle-icon" class="pointer">
+          <img src="spotify-icons/previous-3.png" class="pointer">
+          <img src="spotify-icons/loop.png" class="pointer">
         </div>
         <div class="btm-part-song-nav">
           <p>0:12</p>
-          <span class="song-bar-line"></span>
+          <span class="song-bar-line pointer"></span>
           <p>3:34</p>
         </div>
       </div>
 
       <div class="right-song-nav">
         <div class="icons-combo" >
-          <img src="spotify-icons/list.png" id="first-icon">
-          <img src="spotify-icons/responsive.png">
-          <img src="spotify-icons/audio.png">
-          <div class="volume-line"></div>
+          <img src="spotify-icons/list.png" id="first-icon" class="pointer">
+          <img src="spotify-icons/responsive.png" class="pointer">
+          <img src="spotify-icons/audio.png" class="pointer">
+          <div class="volume-line pointer"></div>
         </div>
       </div>
     </div>
