--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
  
         <!-----Recommended albums and playlists-->
 
-        <div class="container-fluid">
+        <div class="container justify-content-between">
           <div class="row d-flex">
             <div class="col">
               <button type="button" class="btn"><img class="rounded-circle" src="./assets-home/arrow-left.png"
