--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@ body{
 <p class="mx-4 cardtext">Podcasts we think you´ll get hooked on.</p>
 
 <div style="position: relative;">
-  <button><p class="cardtext" style="position: absolute; right: 20px; top: -35px; font-weight: 600;">
-    <a style="text-decoration: none; color: #f8fafa;" href="#"> SEE ALL</a></p></button>
+  <p class="cardtext" style="position: absolute; right: 20px; top: -35px; font-weight: 600;">
+    <a style="text-decoration: none; color: #f8fafa;" href="#"> SEE ALL</a></p>
 </div>
 
 <div class="container-fluid">
