--- a/index.html
+++ b/index.html
@@ -169,23 +169,7 @@
  
         <!-----Recommended albums and playlists-->
 
-<<<<<<< Updated upstream
        <!-- user and arrows -->
-=======
-        <div class="container justify-content-around">
-          <div class="row d-flex">
-            <div class="col-6">
-              <button type="button" class="btn"><img class="rounded-circle" src="./assets-home/arrow-left.png"
-                  alt="arrow left"></button>
-              <button type="button" class="btn"><img class="rounded-circle" src="./assets-home/arrow-right.png"
-                  alt="arrow right"></button>
-            </div>
-            <div class="col d-flex justify-content-end">
-              <span class="badge badge-pill badge-dark"> <img src="./assets-home/user.svg" alt="user icon"> Team</span>
-            </div>
-          </div>
-        </div>
->>>>>>> Stashed changes
 
 <div class="container-fluid">
   <div class="row d-flex">
@@ -463,8 +447,8 @@
 <p class="mx-4 cardtext">Podcasts we think you´ll get hooked on.</p>
 
 <div style="position: relative;">
-  <p class="cardtext" style="position: absolute; right: 20px; top: -35px; font-weight: 600;">
-    <a style="text-decoration: none; color: #f8fafa;" href="#"> SEE ALL</a></p>
+  <button><p class="cardtext" style="position: absolute; right: 20px; top: -35px; font-weight: 600;">
+    <a style="text-decoration: none; color: #f8fafa;" href="#"> SEE ALL</a></p></button>
 </div>
 
 <div class="container-fluid">
