--- a/index.html
+++ b/index.html
@@ -7,13 +7,225 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- ICONS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- CSS -->
+      <link rel="stylesheet" href="navbar.css">
+    <!-- <link rel="stylesheet" href="song-nav.css"> MEH -->
 
-    <title>Spotify clon</title>
+    <title>Spotify clone</title>
+
+    <style>
+      body {
+        background: rgb(63, 7, 6);
+        background: linear-gradient(180deg, rgba(63, 7, 6, 1) 0%, rgba(18, 18, 18, 1) 30%);
+        color: #f8fafa;
+      }
+  
+      .op {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+  
+      .cb {
+        background-color: #161616;
+      }
+  
+      .cardtext {
+        color: #797979;
+        font-size: smaller;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <!-- UNSUCCESSFUL SONG PLAYER? -->
+    <!-- <div class="song-navbar">
+         <div class="left-song-nav">
+           <img src="https://i.scdn.co/image/ab67616d0000b27358aa659299939bc52a2dbc22" alt="Group 'Queen' album cover" class="song-nav-img-resize">
+           <div class="text-and-icons">
+             <div class="text-description">
+               <a href="#"> <h5>Another One Bites The Dust - Remastered 2011</h5> </a>
+               <a href="#"> <p>Queen</p> </a>
+             </div>
+             <div class="song-nav-icons">
+               <img src="spotify-icons/heart.svg" class="song-nav-icons-resize pointer">
+             </div>
+           </div>
+         </div>
+   
+         <div class="middle-song-nav">
+           <div class="top-part-song-nav">
+             <img src="spotify-icons/shuffle.png" class="pointer">
+             <img src="spotify-icons/previous-2.png" class="pointer">
+             <img src="spotify-icons/play-button.png" id="middle-icon" class="pointer">
+             <img src="spotify-icons/previous-3.png" class="pointer">
+             <img src="spotify-icons/loop.png" class="pointer">
+           </div>
+           <div class="btm-part-song-nav">
+             <p>0:12</p>
+             <span class="song-bar-line pointer"></span>
+             <p>3:34</p>
+           </div>
+         </div>
+   
+         <div class="right-song-nav">
+           <div class="icons-combo" >
+             <img src="spotify-icons/list.png" id="first-icon" class="pointer">
+             <img src="spotify-icons/responsive.png" class="pointer">
+             <img src="spotify-icons/audio.png" class="pointer">
+             <div class="volume-line pointer"></div>
+           </div>
+         </div>
+    </div> -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- <div class="mx-0 px-0 container-fluid">
+      <div class="row">
+        <div> class="col-2">
+          <!-- SIDEBAR -->
+          <nav class=" sidebar flex-column fixed-left navbar-dark">
+            <div class="container ml-3 ">
+              <a class="navbar-brand my-4 logo " href="#">
+                <img src="./assets/Spotify_Logo_RGB_White.png" class="img-fluid " alt="">
+              </a>
+              <div class=" main-menu " id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+  
+                    <a class="nav-link active" aria-current="page" href="#">
+                      <i class="bi bi-house-door-fill"></i>
+                      Home
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class="bi bi-search"></i>
+                      Search
+                    </a>
+                  </li>
+  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class="bi bi-music-note-list"></i>
+                      Your library
+                    </a>
+  
+                  </li>
+                </ul>
+  
+              </div>
+  
+  
+  
+              <!---PLay lists-->
+              <div class=" main-menu mt-5 " id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+  
+                    <a class="nav-link " aria-current="page" href="#">
+                      <i class="bi bi-plus-square"></i>
+                      Create playlist
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      <i class="bi bi-caret-right-square"></i>
+                      Liked songs
+                    </a>
+                  </li>
+  
+  
+                </ul>
+  
+              </div>
+  
+              <hr class="ml-0 mt-5 mb-0">
+              <!---Song lists-->
+  
+              <div class=" playlist-menu mt-4 " id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+  
+                    <a class="nav-link active" aria-current="page" href="#">
+                      The Bachelor Ends
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Fun At Snacks
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Girls' Snacks
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Summer Whoop
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Modern Hall
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">
+                      Room For Ends
+                    </a>
+                  </li>
+  
+  
+                </ul>
+  
+              </div>
+  
+  
+              <!---install app-->
+              <div class="main-menu ml-0 mt-5">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li>
+                    <a href="">
+                      <i class="bi bi-arrow-down-circle"></i>
+                      Install App
+                    </a>
+                  </li>
+                </ul>
+              </div>
+  
+            </div>
+          </nav>
+        </div> -->
+        <!---END SIDEBAR-->
+  
+        <!----Content-->
+        <div class=" col-12 col-md-7 col-lg-7 col-xl-10 offset-md-3 mainPage">
+   
+          <!-----Recommended albums and playlists-->
+  
+          <div class="container justify-content-between">
+            <div class="row d-flex">
+              <div class="col">
+                <button type="button" class="btn"><img class="rounded-circle" src="./assets-home/arrow-left.png"
+                    alt="arrow left"></button>
+                <button type="button" class="btn"><img class="rounded-circle" src="./assets-home/arrow-right.png"
+                    alt="arrow right"></button>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
