--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <!-- <div class="mx-0 px-0 container-fluid">
       <div class="row">
         <div> class="col-2">
-          <!-- SIDEBAR -->
+           SIDEBAR -->
           <nav class=" sidebar flex-column fixed-left navbar-dark">
             <div class="container ml-3 ">
               <a class="navbar-brand my-4 logo " href="#">
@@ -194,10 +194,10 @@
   
             </div>
           </nav>
-        </div> -->
+        <!-- </div> --> -->
         <!---END SIDEBAR-->
   
-        <!----Content-->
+        <!----Arrows-->
         <div class=" col-12 col-md-7 col-lg-7 col-xl-10 offset-md-3 mainPage">
    
           <!-----Recommended albums and playlists-->
@@ -213,9 +213,13 @@
             </div>
           </div>
         </div>
+
+        
+
+
   
-      </div>
-    </div>
+      <!-- </div> -->
+    <!-- </div> -->
 
 
 
