--- a/album.html
+++ b/album.html
@@ -199,8 +199,7 @@ h5{
 
 <!-- PLAYLIST MAIN-->
 
-<div class="container-fluid" style="margin-left: 360px;  background: rgb(89,89,89);
-background: linear-gradient(180deg, rgba(89,89,89,1) 0%, rgba(18,18,18,1) 35%); ">
+<div class="container-fluid" style="margin-left: 360px;   ">
 
 
 <!-- LEFT PART -->
