--- a/album.html
+++ b/album.html
@@ -207,8 +207,8 @@ svg{
 
 <!-- LEFT PART -->
 
-<div class="row ml-4 mt-4">
-    <div class="col col-xl-8">
+<div class="row  mt-4">
+    <div class="col-12">
        
 
     <!-- TABLE -->
@@ -234,8 +234,8 @@ svg{
     <table class="table borderless">
       <thead>
         <tr>
-          <th style="width: 2%;" scope="col">#</th>
-          <th style="width: 85%;" scope="col">TITLE</th>
+          <th  scope="col">#</th>
+          <th  scope="col">TITLE</th>
           <th scope="col"></th>
           <th scope="col">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16" style="margin-inline-start: 15px;">
@@ -332,7 +332,6 @@ svg{
       </tbody>
     </table>
    
-  <a class="text-decoration-none" href="#"> <p class="ml-4 text-secondary" style="font-size: small;"><b>SEE MORE</b></p></a>
 
 
  <!-- RIGHT PART -->
