--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <div class="mx-0 px-0 container-fluid">
+  <div class="mx-0 px-0 container-fluid d-flex">
     <div class="row">
       <div class="col-2">
         <!----SIDEBAR-->
@@ -166,7 +166,7 @@
       <!---END SIDEBAR-->
 
       <!----Content-->
-      <div class=" col-6  col-lg-6 col-xl-10 mr-3 mainPage">
+      <div class=" col-6  col-lg-6 col-xl-8 mr-3 mainPage">
  
         <!-----Recommended albums and playlists-->
 
@@ -301,9 +301,9 @@
       <a style="text-decoration: none; color: #f8fafa;" href="#"> SEE ALL</a></p>
     </div>
 
-  <div class="container-fluid">
-    <div class="row d-flex justify-content-xl-around">
-      <div class="col-4 col-lg-4 col-xl">
+  <div class="container ">
+    <div class="row d-flex ">
+      <div class="col-4 col-lg-4 col-xl-3 mt-2">
         <div class="card p-2 cb">
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -312,7 +312,7 @@
            </div>
         </div>
       </div>
-      <div class="col-4 col-lg-4 col-xl">
+      <div class="col-4 col-lg-4 col-xl-3 mt-2">
         <div class="card p-2 cb">
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -321,7 +321,7 @@
            </div>
         </div>
       </div>
-      <div class="col-4 col-lg-4 col-xl">
+      <div class="col-4 col-lg-4 col-xl-3 mt-2">
         <div class="card p-2 cb">
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -330,7 +330,7 @@
            </div>
         </div>
       </div>
-      <div class="col-4 col-lg-4 col-xl">
+      <div class="col-4 col-lg-4 col-xl-3 mt-2">
         <div class="card p-2 cb">
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -339,7 +339,7 @@
            </div>
         </div>
       </div>
-      <div class="col-4 col-lg-4 col-xl">
+      <div class="col-4 col-lg-4 col-xl-3 mt-2">
         <div class="card p-2 cb">
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -365,8 +365,8 @@
 </div>
 
 <div class="container-fluid">
-  <div class="row d-flex justify-content-xl-around">
-    <div class="col-4 col-lg-4 col-xl">
+  <div class="row d-flex justify-content">
+    <div class="col-4 col-lg-4 col-xl-3 mt-2">
       <div class="card p-2 cb">
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -375,7 +375,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4 col-lg-4 col-xl">
+    <div class="col-4 col-lg-4 col-xl-3 mt-2">
       <div class="card p-2 cb">
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -384,7 +384,7 @@
        </div>
       </div>
     </div>
-    <div class="col-4 col-lg-4 col-xl">
+    <div class="col-4 col-lg-4 col-xl-3 mt-2">
       <div class="card p-2 cb">
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -393,7 +393,7 @@
        </div>
       </div>
     </div>
-    <div class="col-4 col-lg-4 col-xl">
+    <div class="col-4 col-lg-4 col-xl-3 mt-2">
       <div class="card p-2 cb">
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -402,7 +402,7 @@
        </div>
       </div>
     </div>
-    <div class="col-4 col-lg-4 col-xl">
+    <div class="col-4 col-lg-4 col-xl-3 mt-2">
       <div class="card p-2 cb">
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -416,7 +416,7 @@
 </div>
 </div>
 
-<div class="song-navbar">
+<div class="song-navbar ml-3">
   <div class="left-song-nav">
     <img src="https://i.scdn.co/image/ab67616d0000b27358aa659299939bc52a2dbc22" alt="Group 'Queen' album cover" class="song-nav-img-resize">
     <div class="text-and-icons">
