--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 
 <body>
-  <div class="mx-0 px-0 container-fluid d-flex">
+  <div class="mx-0 px-0 container-fluid d-flex flex-column"">
     <div class="row">
       <div class="col-2">
         <!----SIDEBAR-->
@@ -166,7 +166,7 @@
       <!---END SIDEBAR-->
 
       <!----Content-->
-      <div class=" col-6  col-lg-6 col-xl-8 mr-3 mainPage">
+      <div class=" col-6  col-lg-6 col-xl-8 mr-0 mainPage">
  
         <!-----Recommended albums and playlists-->
 
@@ -301,7 +301,7 @@
       <a style="text-decoration: none; color: #f8fafa;" href="#"> SEE ALL</a></p>
     </div>
 
-  <div class="container ">
+  <div class="container-fluid ">
     <div class="row d-flex ">
       <div class="col-4 col-lg-4 col-xl-3 mt-2">
         <div class="card p-2 cb">
