Has this worked?

--- a/albumPage.html
+++ b/albumPage.html
@@ -130,13 +130,18 @@
     </table>
 
 
-    <div id="playing">
 
-      <h6>
-      </h6>
+    <div onClick="window.location.reload()" id="playing">
+      <svg id="stopIcon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#121212" class="bi bi-stop-fill" viewBox="0 0 16 16">
+        <path d="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5z"/>
+      </svg>
+
+      <h6 id="playingText" style="display: inline-block;"></h6>
 
 
     </div>
+
+    
     
   
    
