text color changed, link colors fixed

--- a/album-page-jumbotron.html
+++ b/album-page-jumbotron.html
@@ -18,11 +18,10 @@
        <h3  class="mb-0">Bohemian Rhapsody (The Original Soundtrack)</h3>
        <div class="artist-descr-area d-flex mt-2">
         <span class="artist-icon-sm mr-1"></span>
-        <p>Queen</p>
-        <p  id="title-for-circles">2018</p>
+        <a href="#" class="text-white" id="exception"><p>Queen</p></a>
+        <p id="title-for-circles">2018</p>
         <p>22 songs, 1hr 19min</p>
        </div>
-
      </div>
     </div>
   <!-- </div> -->
