--- a/album-page-jumbotron.html
+++ b/album-page-jumbotron.html
@@ -11,7 +11,7 @@
 <body>
   
   <!-- <div class="container-fluid px-0"> -->
-    <div class="jumbotron jumbotron-fluid bg-dark px-4 d-flex align-items-end" >
+    <div class="jumbotron jumbotron-fluid bg-gradient px-4 d-flex align-items-end" >
      <img src="https://i1.sndcdn.com/artworks-000500823264-7n2dz6-t500x500.jpg" class="shadow" style="width: 200px !important;">
      <div class="album-jumbotron-description d-inline-block text-light ml-3">
        <p class="mb-1">ALBUM</p>
