play button animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <style>
     body {
       background: rgb(63, 7, 6);
-      background: linear-gradient(180deg, rgba(63, 7, 6, 1) 0%, rgba(18, 18, 18, 1) 30%);
+      background: linear-(180deg, rgba(63, 7, 6, 1) 0%, rgba(18, 18, 18, 1) 30%);
       color: #f8fafa;
     }
 
@@ -201,6 +201,8 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
+                  <div class="play-btn "></div>
+
               </div>
               </div>
             </div>
@@ -215,7 +217,8 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Random song</h5>
+                  <div class="play-btn "></div>
               </div>
               </div>
             </div>
@@ -233,6 +236,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
+              <div class="play-btn "></div>
+
           </div>
           </div>
         </div>
@@ -248,6 +253,8 @@
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
+              <div class="play-btn "></div>
+
           </div>
           </div>
         </div>
@@ -265,6 +272,8 @@
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
+            <div class="play-btn "></div>
+
         </div>
         </div>
       </div>
@@ -280,6 +289,8 @@
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
+            <div class="play-btn "></div>
+
         </div>
         </div>
       </div>
@@ -308,6 +319,8 @@
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Card title</h6>
+            <div class="play-btn-2 "></div>
+
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
@@ -317,6 +330,7 @@
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Card title</h6>
+            <div class="play-btn-2 "></div>
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
@@ -326,6 +340,7 @@
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Card title</h6>
+            <div class="play-btn-2 "></div>
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
@@ -335,6 +350,7 @@
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Card title</h6>
+            <div class="play-btn-2 "></div>
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
@@ -344,6 +360,7 @@
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Card title</h6>
+            <div class="play-btn-2 "></div>
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
@@ -371,6 +388,7 @@
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h6 class="card-title">Card title</h6>
+          <div class="play-btn-2 "></div>
           <p class="cardtext text-muted">Some quick example text.</p>
         </div>
       </div>
@@ -380,6 +398,7 @@
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h6 class="card-title">Card title</h6>
+          <div class="play-btn-2 "></div>
           <p class="cardtext">Some quick example text.</p>
        </div>
       </div>
@@ -389,6 +408,7 @@
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h6 class="card-title">Card title</h6>
+          <div class="play-btn-2 "></div>
           <p class="cardtext">Some quick example text.</p>
        </div>
       </div>
@@ -398,6 +418,7 @@
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h6 class="card-title">Card title</h6>
+          <div class="play-btn-2 "></div>
           <p class="cardtext">Some quick example text.</p>
        </div>
       </div>
@@ -407,6 +428,7 @@
         <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h6 class="card-title">Card title</h6>
+          <div class="play-btn-2 "></div>
           <p class="cardtext">Some quick example text.</p>
        </div>
       </div>
