Changed Titles and made some display tweaks

--- a/album.html
+++ b/album.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Artist page</title>
+<title>Album page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -324,8 +324,9 @@ svg{
 
       </div>
     </div>
+
 <!-- PLAYER BOTTOM -->
-<div class="container-fluid">
+<div class="container-fluid pl-0">
 <div class="song-navbar">
     <div class="left-song-nav">
       <img src="https://i.scdn.co/image/ab67616d0000b27358aa659299939bc52a2dbc22" alt="Group 'Queen' album cover" class="song-nav-img-resize">
