--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+  <title>Homepage</title>
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -38,7 +41,7 @@
   <title>Spotify clon</title>
 </head>
 
-<body>
+<body class="container-fluid">
   <div class="mx-0 px-0 container-fluid d-flex flex-column"">
     <div class="row">
       <div class="col-2">
@@ -416,7 +419,9 @@
 </div>
 </div>
 
-<div class="song-navbar ml-3">
+<!-- PLAYER BOTTOM -->
+
+<div class="song-navbar">
   <div class="left-song-nav">
     <img src="https://i.scdn.co/image/ab67616d0000b27358aa659299939bc52a2dbc22" alt="Group 'Queen' album cover" class="song-nav-img-resize">
     <div class="text-and-icons">
