--- a/loginPage.html
+++ b/loginPage.html
@@ -12,10 +12,10 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="login.css">
-    <title>Hello, world!</title>
+    <title>Login page</title>
 </head>
 
-<body>
+<body class="container-fluid">
     <header class="border-bottom">
 
 
