display tweaks and link establishing between pages

--- a/album.html
+++ b/album.html
@@ -56,7 +56,7 @@ svg{
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
   
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link active" aria-current="page" href="./index.html">
                       <i class="bi bi-house-door-fill"></i>
                       Home
                     </a>
