--- a/artist-page.html
+++ b/artist-page.html
@@ -48,7 +48,7 @@ h5{
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
   
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link active" aria-current="page" href="./index.html">
                       <i class="bi bi-house-door-fill"></i>
                       Home
                     </a>
@@ -178,9 +178,9 @@ h5{
             GitMaster26...
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="./index.html">Home</a>
+            <a class="dropdown-item" href="./album.html">Album</a>
+            <a class="dropdown-item" href="./loginPage.html">Login</a>
           </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#367CDB" class="bi bi-patch-check-fill" viewBox="0 0 16 16">
