css tweaks album page

--- a/album.html
+++ b/album.html
@@ -38,6 +38,23 @@ svg{
     width: 100%;
     margin-bottom: 0;
 }
+
+td p,
+td,
+th {
+  font-size: 13px;
+  margin: 0;
+  color: #969696;
+}
+
+td h6 {
+  color: #f4f4f4;
+  margin: 0;
+  font-size: medium !important;
+}
+
+
+
 </style>
 <link rel="stylesheet" href="album-jumbotron.css">
 <body>
@@ -212,14 +229,14 @@ svg{
     </div>
 
 
-    <table class="table borderless">
+    <table class="table borderless mb-5">
       <thead>
         <tr>
           <th  scope="col">#</th>
           <th  scope="col">TITLE</th>
           <th scope="col"></th>
           <th scope="col">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clock" viewBox="0 0 16 16" style="margin-inline-start: 15px;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#969696" class="bi bi-clock" viewBox="0 0 16 16" style="margin-inline-start: 10px;">
               <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z"/>
               <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z"/>
             </svg>
