--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="song-nav.css">
+  <link rel="stylesheet" href="createPlaylist.css">
   <style>
     body {
       background: rgb(63, 7, 6);
@@ -88,7 +89,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
 
-                  <a class="nav-link " aria-current="page" href="#">
+                  <a class="nav-link" aria-current="page" href="#" onclick="openModal()" id="open">
                     <i class="bi bi-plus-square"></i>
                     Create playlist
                   </a>
@@ -110,7 +111,7 @@
 
             <div class=" playlist-menu mt-4 " id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                <li class="nav-item the-list-item">
 
                   <a class="nav-link active" aria-current="page" href="#">
                     The Bachelor Ends
@@ -294,6 +295,7 @@
 
     </div>
     </div>
+
   
 <!-- RECENTLY PLAYED SECOND SECTION -->
 
@@ -460,6 +462,26 @@
   </div>
 </div>
 
+<!-- MODAL -->
+  <div class="modal-container" id="modal_container">
+    <div class="modal">
+      <h1>Modals are cool</h1>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      <div class="close-btn" id="close">CLOSE</div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+  <script src="addPlaylist.js"></script>
   <!-- jQuery and Bootstrap Bundle (includes Popper) -->
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
