--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="row">
           <div class="card mb-3 op">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4" id="album">
                 <img src="./assets-home/placeholder.png" alt="...">
               </div>
               <div class="col-md-8">
