--- a/index.html
+++ b/index.html
@@ -472,8 +472,8 @@
     <div class="icons-combo" >
       <img src="spotify-icons/list.png" id="first-icon" class="pointer">
       <img src="spotify-icons/responsive.png" class="pointer">
-      <img src="spotify-icons/audio.png" class="pointer">
-      <input  class="volume-line pointer" type="range" value="50" onchange="volume(event)">
+      <img src="spotify-icons/audio.png" onclick="mute()" class="pointer" id='mute'>
+      <input  class="volume-line pointer"  type="range" value="50" onchange="volume(event)">
       
     </div>
   </div>
