fixed responsiveness on homepage

--- a/artist-page.html
+++ b/artist-page.html
@@ -41,7 +41,7 @@ h5{
   
           <nav class=" sidebar flex-column fixed-left navbar-dark">
             <div class="container ml-3 ">
-              <a class="navbar-brand my-4 logo " href="#">
+              <a class="navbar-brand my-4 logo " href="./index.html">
                 <img src="./assets/Spotify_Logo_RGB_White.png" class="img-fluid " alt="">
               </a>
               <div class=" main-menu " id="navbarSupportedContent">
