updated some imgs

--- a/index.html
+++ b/index.html
@@ -407,6 +407,24 @@ h5.card-title{
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
+        <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
+          <img src="https://images-eu.ssl-images-amazon.com/images/I/81-yKbVND-L.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">Doggos Psy Trance</h6>
+            <div class="play-btn-2 "></div>
+
+            <p class="cardtext">Some quick example text.</p>
+           </div>
+        </div>
+        <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
+          <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">Welcome To The Jumbotron</h6>
+            <div class="play-btn-2 "></div>
+
+            <p class="cardtext">Some quick example text.</p>
+           </div>
+        </div>
         
 
 </div>
@@ -469,7 +487,24 @@ h5.card-title{
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
-        
+        <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
+          <img src="https://images-eu.ssl-images-amazon.com/images/I/81-yKbVND-L.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">Sunshine In Your Eyes</h6>
+            <div class="play-btn-2 "></div>
+
+            <p class="cardtext">Some quick example text.</p>
+           </div>
+        </div>
+        <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
+          <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h6 class="card-title">Striving For Excellence</h6>
+            <div class="play-btn-2 "></div>
+
+            <p class="cardtext">Some quick example text.</p>
+           </div>
+        </div>
 
 </div>
 </div>
