--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Random song</h5>
+                  <audio src="./Queen - Fat Bottomed Girls.mp3" id="audio"></audio>
                   <div class="play-btn "></div>
               </div>
               </div>
@@ -457,7 +458,7 @@
     <div class="top-part-song-nav">
       <img src="spotify-icons/shuffle.png" class="pointer">
       <img src="spotify-icons/previous-2.png" class="pointer">
-      <img src="spotify-icons/play-button.png" id="middle-icon" class="pointer">
+      <img src="spotify-icons/play-button.png" onclick="pausePlay ()" id="middle-icon" class="pointer">
       <img src="spotify-icons/previous-3.png" class="pointer">
       <img src="spotify-icons/loop.png" class="pointer">
     </div>
