--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ h5.card-title{
            </div>
         </div>
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
-          <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
+          <img src="https://images.pond5.com/sad-desperate-man-working-night-footage-089780757_prevstill.jpeg" class="card-img-top" alt="..." style="height: 182px; width: 182px; object-fit: cover;">
           <div class="card-body">
             <h6 class="card-title">Striving For Excellence</h6>
             <div class="play-btn-2 "></div>
