--- a/album.html
+++ b/album.html
@@ -64,7 +64,7 @@ td h6 {
           <!----SIDEBAR-->
   
   
-          <nav class=" sidebar flex-column fixed-left navbar-dark">
+          <nav class=" sidebar flex-column fixed-left navbar-dark mb-5 pb-5">
             <div class="container ml-3 ">
               <a class="navbar-brand my-4 logo " href="./index.html">
                 <img src="./assets/Spotify_Logo_RGB_White.png" class="img-fluid " alt="">
@@ -165,10 +165,10 @@ td h6 {
   
   
               <!---install app-->
-              <div class="main-menu ml-0 mt-5">
+              <div class="main-menu ml-0 mb-5 mt-3">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li>
-                    <a href="">
+                    <a href=""class="text-secondary">
                       <i class="bi bi-arrow-down-circle"></i>
                       Install App
                     </a>
