--- a/artist-page.html
+++ b/artist-page.html
@@ -39,7 +39,7 @@ h5{
           <!----SIDEBAR-->
   
   
-          <nav class=" sidebar flex-column fixed-left navbar-dark">
+          <nav class=" sidebar flex-column fixed-left navbar-dark pb-5 mb-5">
             <div class="container ml-3 ">
               <a class="navbar-brand my-4 logo " href="./index.html">
                 <img src="./assets/Spotify_Logo_RGB_White.png" class="img-fluid " alt="">
@@ -140,10 +140,10 @@ h5{
   
   
               <!---install app-->
-              <div class="main-menu ml-0 mt-5">
+              <div class="main-menu ml-0 mt-3 mb-5">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li>
-                    <a href="">
+                    <a href="" class="text-secondary">
                       <i class="bi bi-arrow-down-circle"></i>
                       Install App
                     </a>
