css tweaks index.html

--- a/index.html
+++ b/index.html
@@ -443,6 +443,16 @@ h5.card-title{
 <div class="container-fluid d-flex justify-content-start flex-wrap mb-5 pb-5">
 
   <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
+    <img src="https://images.pond5.com/sad-desperate-man-working-night-footage-089780757_prevstill.jpeg" class="card-img-top" alt="..." style="height: 182px; width: 182px; object-fit: cover;">
+    <div class="card-body">
+      <h6 class="card-title">Striving For Excellence</h6>
+      <div class="play-btn-2 "></div>
+
+      <p class="cardtext">Some quick example text.</p>
+     </div>
+  </div>
+
+  <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
     <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h6 class="card-title">Best Of Rock 1977</h6>
@@ -469,15 +479,7 @@ h5.card-title{
       <p class="cardtext">Some quick example text.</p>
      </div>
   </div>
-   <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
-          <img src="https://images-eu.ssl-images-amazon.com/images/I/81-yKbVND-L.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h6 class="card-title">Buy Bitcoin</h6>
-            <div class="play-btn-2 "></div>
-
-            <p class="cardtext">Some quick example text.</p>
-           </div>
-        </div>
+   
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
           <img src="./assets-home/placeholder vertical.png" class="card-img-top" alt="...">
           <div class="card-body">
@@ -488,7 +490,7 @@ h5.card-title{
            </div>
         </div>
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
-          <img src="https://images-eu.ssl-images-amazon.com/images/I/81-yKbVND-L.png" class="card-img-top" alt="...">
+          <img src="https://i1.sndcdn.com/artworks-000151525346-wdkyc5-t500x500.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h6 class="card-title">Sunshine In Your Eyes</h6>
             <div class="play-btn-2 "></div>
@@ -496,10 +498,11 @@ h5.card-title{
             <p class="cardtext">Some quick example text.</p>
            </div>
         </div>
+      
         <div class="card p-2 cb mx-2 mb-4" style="min-width: 150px; max-width: 200px;">
-          <img src="https://images.pond5.com/sad-desperate-man-working-night-footage-089780757_prevstill.jpeg" class="card-img-top" alt="..." style="height: 182px; width: 182px; object-fit: cover;">
+          <img src="./assets-home/cover_3.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h6 class="card-title">Striving For Excellence</h6>
+            <h6 class="card-title">Buy Bitcoin</h6>
             <div class="play-btn-2 "></div>
 
             <p class="cardtext">Some quick example text.</p>
