--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h5.card-title{
         <nav class=" sidebar flex-column fixed-left navbar-dark mb-5 pb-5">
           <div class="container ml-3 ">
             <a class="navbar-brand my-4 logo " href="./index.html">
-              <img src="./assets/Spotify_Logo_RGB_White.png" class="img-fluid " alt="">
+              <img src="./assets/Spotify_Logo_RGB_White.png" class="firstlogo" alt="">
             </a>
             <div class=" main-menu " id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
