--- a/album.html
+++ b/album.html
@@ -33,7 +33,7 @@ svg{
   color: white;
 }
 .jumbotron{
-   margin-left: 370px;
+   margin-left: 280px;
     margin-right: 0;
     width: 100%;
     margin-bottom: 0;
@@ -57,6 +57,7 @@ td h6 {
 
 </style>
 <link rel="stylesheet" href="album-jumbotron.css">
+
 <body>
     <div class="mx-0 px-0 container-fluid overflow-hidden">
       <div class="row">
@@ -67,7 +68,7 @@ td h6 {
           <nav class=" sidebar flex-column fixed-left navbar-dark mb-5 pb-5">
             <div class="container ml-3 ">
               <a class="navbar-brand my-4 logo " href="./index.html">
-                <img src="./assets/Spotify_Logo_RGB_White.png" class="img-fluid " alt="">
+                <img src="./assets/Spotify_Logo_RGB_White.png" class="firstlogo" alt="">
               </a>
               <div class=" main-menu " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -186,7 +187,7 @@ td h6 {
         <!---END SIDEBAR-->
 
 <!-- JUMBOTRON -->
-<div sytle=""class="jumbotron jumbotron-fluid bg-gradient d-flex align-items-end" >
+<div sytle=""class="jumbotron jumbotron-fluid bg-gradient d-flex align-items-end">
 
   <svg class="op" id="leftIcon" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi bi-chevron-left" viewBox="0 0 16 16">
     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
@@ -213,7 +214,7 @@ td h6 {
 
 <!-- PLAYLIST MAIN-->
 
-<div class="container-fluid" style="margin-left: 360px;   ">
+<div class="container-fluid" style="margin-left: 277px;   ">
 
 
 <!-- LEFT PART -->
