added head tags

--- a/album.html
+++ b/album.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta charset="UTF-8">
 <title>Album page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,6 +12,7 @@
 <link rel="stylesheet" href="./navbar.css">
 <link rel="stylesheet" href="./jumbotronStyle.css">
 <link rel="stylesheet" href="./albumStyle.css">
+<link rel="stylesheet" href="album-jumbotron.css">
 
 <style>
      .op {
@@ -53,10 +55,9 @@ td h6 {
   font-size: medium !important;
 }
 
-
-
 </style>
-<link rel="stylesheet" href="album-jumbotron.css">
+
+</head>
 
 <body>
     <div class="mx-0 px-0 container-fluid overflow-hidden">
