--- a/artist-page.html
+++ b/artist-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 <meta charset="UTF-8">
 <title>Artist page</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -31,6 +32,7 @@ h5{
 }
 
 </style>
+</head>
 
 <body>
     <div class="mx-0 px-0 container-fluid overflow-hidden">
