Title Icons added to both pages

--- a/jumbotron.html
+++ b/jumbotron.html
@@ -10,6 +10,10 @@
 
     <title>Album Page</title>
 
+    <link rel = "icon" href = 
+"https://cdn3.iconfinder.com/data/icons/popular-services-brands/512/spotify-512.png" 
+        type = "image/x-icon">
+
     <link rel="stylesheet" href="jumbotronStyle.css">
   </head>
   <body id="myContent">
