background adjustments album page

--- a/album.html
+++ b/album.html
@@ -15,6 +15,11 @@
 <link rel="stylesheet" href="album-jumbotron.css">
 
 <style>
+  body{
+    background: rgb(95,33,76);
+background: linear-gradient(180deg, rgba(95,33,76,1) 20%, rgba(18,18,18,1) 55%) !important;
+  }
+
      .op {
       background-color: rgba(255, 255, 255, 0);
     }
@@ -197,7 +202,7 @@ td h6 {
     <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
   </svg>
 
-  <img src="https://i1.sndcdn.com/artworks-000500823264-7n2dz6-t500x500.jpg" class="shadow" style="width: 200px !important;">
+  <img src="https://i1.sndcdn.com/artworks-000500823264-7n2dz6-t500x500.jpg" class="shadow ml-5" style="width: 200px !important;">
   <div class="album-jumbotron-description d-inline-block text-light ml-3">
     <p class="mb-1">ALBUM</p>
     <h3  class="mb-0">Bohemian Rhapsody (The Original Soundtrack)</h3>
