progress bar working

--- a/index.html
+++ b/index.html
@@ -464,7 +464,9 @@
     </div>
     <div class="btm-part-song-nav">
       <p>0:12</p>
-      <span class="song-bar-line pointer"></span>
+      <input type="range" onclick=" progress()" value='50'  name="progress-song" class="song-bar-line pointer" id="pb">
+      
+   
       <p>3:34</p>
     </div>
   </div>
