--- a/index.html
+++ b/index.html
@@ -463,11 +463,11 @@
       <img src="spotify-icons/loop.png" class="pointer">
     </div>
     <div class="btm-part-song-nav">
-      <p>0:12</p>
+      <p id="currentDuration">0:00</p>
       <input type="range" onchange=" progress()" value='0'  name="progress-song" class="song-bar-line pointer" id="pb">
       
    
-      <p>3:34</p>
+      <p id="totalduration">3:34</p>
     </div>
   </div>
 
